--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -21,7 +21,6 @@
     "logo_max_width": 200,
     "favicon": "shopify:\/\/shop_images\/ico.png",
     "safe_checkout_pcart": "",
-    "safe_checkout_detail": "",
     "safe_checkout_cart": "",
     "color_primary": "#fb1e1e",
     "color_secondary": "#fb1e1e",
@@ -29,6 +28,8 @@
     "color_body_bg": "#ffffff",
     "color_content_bg": "#ffffff",
     "color_body_headings": "#222222",
+    "color_compare_price": "#797979",
+    "color_compare_discount": "#00582b",
     "color_sub": "#fb1e1e",
     "color_body_text": "#423f3f",
     "color_button_bg": "#ff5f6d",
@@ -244,13 +245,15 @@
     "upsell_time": 1.5,
     "enablevideo": false,
     "free_shipping_enable": true,
-    "free_shipping_value": 200,
+    "free_shipping_value": 100,
     "free_shipping_text": "Your order is free delivery !",
     "shipping_button": "Delivery information",
     "page_shipping": "shipping-time",
     "enable_countdown_page": true,
     "enable_countdown_card": false,
     "new_label_day": 1,
+    "sale_label_enable": false,
+    "tagsale": "percent",
     "second_image": true,
     "e_swatch": false,
     "enable_compare": false,
@@ -1445,7 +1448,7 @@
           "enable_transparent": false,
           "hover_transparent": false,
           "enable_white": false,
-          "enable_sticky": false,
+          "enable_sticky": true,
           "enable_dropdownfull": true,
           "enabletopbar": true,
           "enable_login": true,
@@ -1531,8 +1534,7 @@
           "1565708450613",
           "1562509535458"
         ],
-        "settings": {
-        }
+        "settings": {}
       },
       "page-faqs": {
         "type": "page-faqs",
@@ -2221,7 +2223,7 @@
           "dots": false,
           "infinite": true,
           "radius": false,
-          "link_list_head": "service",
+          "link_list_head": "",
           "email_sidebar": true,
           "email_sidebar_title": "Newsletter",
           "socialshare": true
@@ -2954,8 +2956,7 @@
       },
       "slideshow-4": {
         "type": "slideshow-4",
-        "settings": {
-        }
+        "settings": {}
       },
       "pnewsletter-3": {
         "type": "pnewsletter-3",
@@ -3925,7 +3926,7 @@
             "type": "html",
             "settings": {
               "fullhtml": false,
-              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Fall Sale<\/h2>\n<a href=\"\/collections\/new-arrivals\" class=\"btn btn-theme\">Shop now<\/a>\n<div class=\"mt-lg-5 pt-5 pl-lg-5 text-right\">\n<\/div>\n<\/div>",
+              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Fall Sale<\/h2>\n<a href=\"\/collections\/all\" class=\"btn btn-theme\">Shop now<\/a>\n<div class=\"mt-lg-5 pt-5 pl-lg-5 text-right\">\n<\/div>\n<\/div>",
               "width": "50%",
               "align": "auto"
             }
@@ -4103,7 +4104,7 @@
             "settings": {
               "bgtext": "#fefefe",
               "title": "",
-              "text": "<div class=\"pl-lg-5 ml-lg-5\">\n<span class=\"subtop\">MATCH COLORS<\/span>\n<h2 class=\"mt-2 mb-4\">Hyper wearable Fashion <\/h2>\n<p>Discover the art of style at The Origami Way, where fashion meets finesse with our curated selection of clothing and handbags, folding elegance into every outfit.<\/p>\n<a href=\"\/women\" class=\"mt-5 btn btn-theme\"> Shop now<\/a>\n<\/div>",
+              "text": "<div class=\"pl-lg-5 ml-lg-5\">\n<span class=\"subtop\">MATCH COLORS<\/span>\n<h2 class=\"mt-2 mb-4\">Hyper wearable Fashion <\/h2>\n<p>Discover the art of style at The Origami Way, where fashion meets finesse with our curated selection of clothing and handbags, folding elegance into every outfit.<\/p>\n<a href=\"\/collections\/women\" class=\"mt-5 btn btn-theme\"> Shop now<\/a>\n<\/div>",
               "align": "left"
             }
           }
@@ -4386,8 +4387,7 @@
       "1143683040400472741": {
         "type": "shopify:\/\/apps\/trustoo-io-reviews\/blocks\/trustoo-review-switch\/c8f15077-6475-4e86-ad06-b66038d5ba2c",
         "disabled": false,
-        "settings": {
-        }
+        "settings": {}
       },
       "15683396631634586217": {
         "type": "shopify:\/\/apps\/inbox\/blocks\/chat\/841fc607-4181-4ad1-842d-e24d7f8bad6b",
@@ -4836,8 +4836,7 @@
         },
         "footer-1": {
           "type": "footer-1",
-          "settings": {
-          }
+          "settings": {}
         },
         "product-template-1": {
           "type": "product-template-1",
@@ -5415,8 +5414,7 @@
             "1561993581158-1",
             "1561993581158-2"
           ],
-          "settings": {
-          }
+          "settings": {}
         },
         "header-3": {
           "type": "header-3",
