--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -53,7 +53,7 @@
     "font_weight_sub": "500",
     "base_size_sup": 13,
     "font_weight_button": "500",
-    "main_linklist": "main-menu",
+    "main_linklist": "main-menu-1",
     "font_family_menu": "--g-font-4",
     "font_sizemenu": "15px",
     "font_weight": "500",
@@ -3677,8 +3677,8 @@
               "width": "100%",
               "alignhorizotal": "center",
               "align": "auto",
-              "titlecount": "Fall Discount Sale",
-              "time": "11\/01\/2024",
+              "titlecount": "Spring 2025 Discount Sale",
+              "time": "01\/31\/2025",
               "button_link": "shopify:\/\/collections\/all",
               "button_text": "Shop now",
               "cover": "contain"
@@ -3926,7 +3926,7 @@
             "type": "html",
             "settings": {
               "fullhtml": false,
-              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Fall Sale<\/h2>\n<a href=\"\/collections\/all\" class=\"btn btn-theme\">Shop now<\/a>\n<div class=\"mt-lg-5 pt-5 pl-lg-5 text-right\">\n<\/div>\n<\/div>",
+              "code": "<div class=\" pr-md-5 mr-md-5 pt-5\">\n<span class=\"subtop\"> limited edition<\/span>\n<h2 class=\"mt-3 mb-5\">New ! Supper<br> Spring Sale<\/h2>\n<a href=\"\/collections\/all\" class=\"btn btn-theme\">Shop now<\/a>\n<div class=\"mt-lg-5 pt-5 pl-lg-5 text-right\">\n<\/div>\n<\/div>",
               "width": "50%",
               "align": "auto"
             }
@@ -4229,7 +4229,7 @@
           "1656870916c9656b37-0": {
             "type": "collection",
             "settings": {
-              "title": "Fall collection",
+              "title": "Spring collection",
               "collection": "fall-collection"
             }
           }
@@ -4384,11 +4384,6 @@
       "165690588456226989"
     ],
     "blocks": {
-      "1143683040400472741": {
-        "type": "shopify:\/\/apps\/trustoo-io-reviews\/blocks\/trustoo-review-switch\/c8f15077-6475-4e86-ad06-b66038d5ba2c",
-        "disabled": false,
-        "settings": {}
-      },
       "15683396631634586217": {
         "type": "shopify:\/\/apps\/inbox\/blocks\/chat\/841fc607-4181-4ad1-842d-e24d7f8bad6b",
         "disabled": false,
@@ -4402,6 +4397,11 @@
           "button_vertical_position": "lowest",
           "greeting_message": ""
         }
+      },
+      "14060646107696862457": {
+        "type": "shopify:\/\/apps\/judge-me-reviews\/blocks\/judgeme_core\/61ccd3b1-a9f2-4160-9fe9-4fec8413e5d8",
+        "disabled": false,
+        "settings": {}
       }
     }
   },
